<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.dashboard.DashboardFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_surface"
            android:padding="16dp">

            <androidx.constraintlayout.widget.Group
                android:id="@+id/contentGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="summaryCardContainer,pieCard,barCard" />

            <LinearLayout
                android:id="@+id/summaryCardContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title_dashboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/summary"
                    android:textSize="@dimen/_24sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16dp"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_total_items"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="@dimen/_100dp"
                        android:layout_marginEnd="@dimen/_8dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/md_theme_tertiaryContainer"
                        app:cardCornerRadius="@dimen/_20dp"
                        app:layout_constraintEnd_toStartOf="@+id/card_out_of_stock"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_dashboard">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/_8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/total_items"
                                android:textSize="@dimen/_16sp" />

                            <TextView
                                android:id="@+id/text_total_items"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/_24sp"
                                android:textStyle="bold"
                                tools:text="124" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_out_of_stock"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="@dimen/_100dp"
                        android:layout_marginStart="@dimen/_8dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/md_theme_tertiaryContainer"
                        app:cardCornerRadius="@dimen/_20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/card_total_items"
                        app:layout_constraintTop_toTopOf="@+id/card_total_items">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/_8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/out_of_stock"
                                android:textSize="@dimen/_16sp" />

                            <TextView
                                android:id="@+id/text_out_of_stock"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/red"
                                android:textSize="@dimen/_24sp"
                                android:textStyle="bold"
                                tools:text="12" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16dp"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_low_stock"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="@dimen/_100dp"
                        android:layout_marginEnd="@dimen/_8dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/md_theme_tertiaryContainer"
                        app:cardCornerRadius="@dimen/_20dp"
                        app:layout_constraintEnd_toStartOf="@+id/card_recent_activity"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/card_total_items">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/_8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/low_stock"
                                android:textSize="@dimen/_16sp" />

                            <TextView
                                android:id="@+id/text_low_stock"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/yelloe"
                                android:textSize="@dimen/_24sp"
                                android:textStyle="bold"
                                tools:text="18" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_recent_activity"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="@dimen/_100dp"
                        android:layout_marginStart="@dimen/_8dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/md_theme_tertiaryContainer"
                        app:cardCornerRadius="@dimen/_20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/card_low_stock"
                        app:layout_constraintTop_toTopOf="@+id/card_low_stock">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/_8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/recent_activity"
                                android:textSize="@dimen/_16sp" />

                            <TextView
                                android:id="@+id/text_recent_activity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/_24sp"
                                android:textStyle="bold"
                                tools:text="6" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/title_category_breakdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24dp"
                android:text="@string/category_breakdown"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/summaryCardContainer" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/pieCard"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                app:cardBackgroundColor="@color/md_theme_tertiaryContainer"
                app:cardCornerRadius="@dimen/_20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_category_breakdown">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/categoryPieChart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_300dp"
                    android:layout_margin="@dimen/_8dp"
                    app:layout_constraintTop_toBottomOf="@id/title_category_breakdown" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/title_stock_levels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24dp"
                android:text="@string/stock_levels"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/pieCard" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/barCard"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:padding="@dimen/_8dp"
                android:layout_marginBottom="70dp"
                app:cardBackgroundColor="@color/md_theme_tertiaryContainer"
                app:cardCornerRadius="@dimen/_20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_stock_levels">

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/stockLevelBarChart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_300dp"
                    android:layout_margin="@dimen/_8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_stock_levels" />
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
